--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Fri Jun 27 00:57:18 UTC 2025
+#Sat Jun 28 18:16:32 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -29,7 +29,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
+motd=§r              §5§l(Server de mc)  §dSi no deja entrar al server§r\n          §f§nRevisen nuevos mods en el disc o la version
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
