--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Jun 29 23:17:07 UTC 2025
+#Mon Jun 30 01:04:32 UTC 2025
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -29,7 +29,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(Server de mc)  §dSi no deja entrar al server§r\n          §f§nRevisen nuevos mods en el disc o la version
+motd=§r              §5§lServer de mc §dRevisa disc por mods§r\n
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
